<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="Switch">What does this do?</string>
    <string name="ImageDescription">Camera</string>
    <string name="LoginButton">Log In</string>
    <string name="LoginHint">Log in name</string>
    <string name="LoginInput"></string>
    <string name="dialog_message">Do you wish to end the activity?</string>
    <string name="dialog_title">Menu</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="startChat">Start Chat</string>
    <string name="startWeather">Weather Activity</string>

    <string name="sendMessage">Send</string>
    <string name="fragDelete">Delete</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="startToolBar">Toolbar Activity</string>
    <string name="goBack">Do you want to go back?</string>
    <string name="exit">Exit</string>
    <string name="setMessage">Set Message</string>
    <string name="cancelMessage">Cancel</string>
</resources>
