<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.andrew.androidlabs.ListItemsActivity"
    android:rowCount="2"
    android:columnCount="2">




    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RadioButton"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="1"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/CheckBox"
        android:layout_columnWeight="1"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_column="0"
        android:layout_row="1"
        android:contentDescription="@string/ImageDescription"
        android:layout_columnWeight="1"/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Switch"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_columnWeight="1"
        />
</GridLayout>
